# blog-cpp-callbacks

./: CMakeLists.txt  build.sh  main.cpp
benchmarks/: BasicCCallback.cpp  CMakeLists.txt  CallbackInterfaceUsingInheritance.cpp  CallingMemberThroughStandardCFunction.cpp  ImpossiblyFastDelegates.cpp  NaiosFunction2WithLambdas.cpp  StaticVariablesWithTemplating.cpp  StdFunctionRef.cpp  StdFunctionWithBind.cpp  StdFunctionWithLambdas.cpp  Templates.cpp  TemplatingTheMemberFunctionAndInstance.cpp  main.cpp
callback-interface-using-inheritance/: CMakeLists.txt  main.cpp
caller-knows-the-callee-type/: CMakeLists.txt  main.cpp
calling-member-functions-through-shared-variables/: CMakeLists.txt  main.cpp
impossibly-fast-delegates/: CMakeLists.txt  main.cpp
static-methods-or-non-member-functions/: CMakeLists.txt  main.cpp
static-variables-with-templating/: CMakeLists.txt  main.cpp
std-function-with-lambdas/: main.cpp
std-function-with-std-bind/: CMakeLists.txt  main.cpp
templates/: main.cpp
templating-the-member-function-and-instance/: CMakeLists.txt  main.cpp
using-std-function-ref/: CMakeLists.txt  main.cpp
using-std-function-with-lambdas/: CMakeLists.txt  main.cpp
using-std-function-with-std-bind/: main.cpp
